Shop page added (no functionality yet) and bug fixed with the shopping cart button

--- a/website/created.html
+++ b/website/created.html
@@ -37,7 +37,7 @@
 
         <span class="user-wrapper">
             <a href="login.php"><i class="fa-solid fa-user"></i></a>
-            <a href="shopping-cart.html"
+            <a href="shop.html"
               ><i class="fa-solid fa-cart-shopping" value="0"></i
             ></a>
           </span>
