--- a/website/index.html
+++ b/website/index.html
@@ -37,7 +37,7 @@
 
         <span class="user-wrapper">
             <a href="login.html"><i class="fa-solid fa-user"></i></a>
-            <a href="shopping-cart.html"
+            <a href="shop.html"
               ><i class="fa-solid fa-cart-shopping" value="0"></i
             ></a>
           </span>
@@ -123,8 +123,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="register.html">Register</a></li>
-            <li><a href="login.php">Login</a></li>
-            <li><a href="shop.php">Shopping Cart</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="shop.html">Shopping Cart</a></li>
           </ul>
         </nav>
 
