Added checkout modal (popup) and minor changes on other pages

--- a/website/forgot-password.html
+++ b/website/forgot-password.html
@@ -90,7 +90,7 @@
 
                 <label class="show-pass"><input type="checkbox" id="toggle-pass" /> Show password</label>
 
-                <button type="submit" id="login-btn">Login</button>
+                <button type="submit" id="login-btn">Reset password</button>
                 </form>
             </div>
             <div class="info">
