--- a/website/login.html
+++ b/website/login.html
@@ -87,6 +87,8 @@
                 <a href="forgot-password.html" class="forgot-pass">Forgot your password?</a>
                 <button type="submit" id="login-btn">Login</button>
                 </form>
+                <br/>
+                <a href="register.html"><button id="register-btn">Register</button></a>
             </div>
             <div class="info">
                 <h3>Valid usernames and passwords for testing:</h3>
