Test scenario and test cases End-to-End created

--- a/website/shop.html
+++ b/website/shop.html
@@ -152,7 +152,7 @@
 
           <div style="display:flex;justify-content:flex-end;gap:.5rem;margin-top:1rem;">
             <button type="button" id="cancel-checkout">Cancel</button>
-            <button type="submit">Place order</button>
+            <button type="submit" id="place-order">Place order</button>
           </div>
           <p id="checkout-msg" class="success" style="display:none;margin-top:.5rem;color:green;font-weight:700"></p>
         </form>
