Minor changes and readme file improved

--- a/website/index.html
+++ b/website/index.html
@@ -1,3 +1,8 @@
+<!--  ----------------------------------------------------- 
+Assignment: 420-TZ4-GX SOFTWARE TESTING TOOLS
+Written by: Juan Camilo Loaiza Alarcon - 6805001
+Short Description of your project/code and how you designed it.
+---------------------------------------------------- -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
