--- a/website/index.html
+++ b/website/index.html
@@ -1,7 +1,7 @@
 <!--  ----------------------------------------------------- 
 Assignment: 420-TZ4-GX SOFTWARE TESTING TOOLS
 Written by: Juan Camilo Loaiza Alarcon - 6805001
-Short Description of your project/code and how you designed it.
+This project is a software testing suite for a web application; using HTML, CSS and JavaScript for the webpage, and selenium and katalon for automated testing.
 ---------------------------------------------------- -->
 <!DOCTYPE html>
 <html lang="en">
