--- a/website/register.html
+++ b/website/register.html
@@ -1,3 +1,8 @@
+<!--  ----------------------------------------------------- 
+Assignment: 420-TZ4-GX SOFTWARE TESTING TOOLS
+Written by: Juan Camilo Loaiza Alarcon - 6805001
+This project is a software testing suite for a web application; using HTML, CSS and JavaScript for the webpage, and selenium and katalon for automated testing.
+---------------------------------------------------- -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
